--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "'This is a properly formatted string!'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
     }
    ],
    "source": [
-    "\"Th\"is will throw an error!"
+    "\"Th will throw an error!"
    ]
   },
   {
