--- a/index.ipynb
+++ b/index.ipynb
@@ -201,22 +201,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'homer simpson'"
+       "'HOMER SIMPSON'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'Homer Simpson'.lower()"
+    "'Homer Simpson'.upper()"
    ]
   },
   {
