Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -808,13 +808,13 @@
        "'Hello World'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"hello world\".title()"
+    "\"harry\".title()"
    ]
   },
   {
