--- a/index.ipynb
+++ b/index.ipynb
@@ -799,22 +799,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello World'"
+       "'Harry Potter'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"harry\".title()"
+    "\"harry potter\".title()"
    ]
   },
   {
